<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/quizTitle"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/question_number"
        android:text="@string/questionNumber"
        android:layout_gravity="left"
        android:textSize="11sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/question"
        android:text="@string/Question"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/quizImage"
        android:visibility="gone"
        android:contentDescription="@string/picture"
        android:layout_height="100dp"/>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"/>

        <RadioButton
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"/>

        <RadioButton
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"/>

    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/finishQuiz"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:id="@+id/finish_quiz"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorBlue"
            android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/finish"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:id="@+id/end_Quiz"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorBlue"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/next_question"
            android:text="@string/next"
            android:textStyle="bold"
            android:layout_gravity="right"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="7dp"
            android:textColor="@color/colorBlue"
            android:layout_height="wrap_content"/>

    </FrameLayout>
</LinearLayout>