<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:layout_marginTop="10dp"
        android:id="@+id/BadgeImage"
        android:contentDescription="@string/newBadge"
        android:layout_height="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/newBadgeText"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/download"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:id="@+id/downloadBadge"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorBlue"
            android:layout_height="wrap_content" />
    </FrameLayout>
</LinearLayout>